<resources>
    <string name="app_name">QrCode</string>
    <string name="ok">OK</string>
    <string name="open_url">Open Url</string>
    <string name="choose_brower">Choose browser</string>
    <string name="nothing_try">Nothing found try a different image or try again</string>
    <string name="error">Error</string>
    <string name="not_found">File not found</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="photo">Photo</string>
    <string name="scanner">Scanner</string>
    <string name="setting">Setting</string>
    <string name="history">History</string>
    <string name="choose_a_image_having_qr_code_to_scan">Choose a image having QR code to Scan</string>
    <string name="automatically_open_the_link">Automatically open the link</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="autofocus">AutoFocus</string>
    <string name="scanned_result">Scanned Result</string>
    <string name="product">Product</string>
    <string name="qr_code">QR Code</string>
    <string name="content_qr">Position the device above the QR Code/Barcode and wait for automatic scanning</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="share_on">Share On</string>
    <string name="about">About</string>
    <string name="message">Copy</string>
    <string name="content_dialog">Do you want to delete item ?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">ACCEPT</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="all_day_event">All day event</string>
    <string name="amazon">Amazon</string>
    <string name="app_folder_name">QR &amp; Barcode Scanner</string>
    <string name="app_history_favorites_folder_name">Favorites</string>
    <string name="app_history_favorites_name_prefix">Favorites_%1$d.%2$s</string>
    <string name="app_history_folder_name">History</string>
    <string name="app_history_name_format">%1$s_%2$d.%3$s</string>
    <string name="app_history_name_prefix">History_%1$d.%2$s</string>
    <string name="button_add_calendar">Add event</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Web Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_copy_password">Copy Password</string>
    <string name="button_custom_product_search">Content search</string>
    <string name="button_delete">Delete</string>
    <string name="button_dial">Call</string>
    <string name="button_edit">Edit</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Book search</string>
    <string name="button_search_bookmark_contents">Content search</string>
    <string name="button_share">Share</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect</string>
    <string name="camera_scan_title">Scan QR or Barcode</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_button">CREATE</string>
    <string name="create_error">Error generating QR. Please check if data is in the right format.</string>
    <string name="create_error_barcode">Invalid barcode value.</string>
    <string name="create_other">Other types</string>
    <string name="current_location">Current location</string>
    <string name="default_web_client_id">975752536922-mbgl5q72aqh9esl2f3b7ijj708j3k994.apps.googleusercontent.com</string>
    <string name="deleted">Deleted</string>
    <string name="description">Description</string>
    <string name="double_value">%1$f</string>
    <string name="drawer_entry_create">Create</string>
    <string name="drawer_entry_create2">Create QR</string>
    <string name="drawer_entry_favorites">Favorites</string>
    <string name="drawer_entry_history">History</string>
    <string name="drawer_entry_light">Light</string>
    <string name="drawer_entry_like">Like</string>
    <string name="drawer_entry_our_apps">Our Apps</string>
    <string name="drawer_entry_scan">Scan</string>
    <string name="drawer_entry_scan_photo">Scan Image</string>
    <string name="drawer_entry_scan_photo2">Scan from Gallery</string>
    <string name="drawer_entry_settings">Settings</string>
    <string name="drawer_entry_share">Share</string>
    <string name="ebay">eBay</string>
    <string name="end">End:</string>
    <string name="event_title">Event name</string>
    <string name="exit_popup_confirm">Yes</string>
    <string name="exit_popup_deny">Cancel</string>
    <string name="exit_popup_question">Are you sure you want to exit?</string>
    <string name="exit_popup_title">Exit</string>
    <string name="extract_code">Enter 7,8,12 or 13 digits</string>
    <string name="feedback_text">"Please tell us what you didn't like:"</string>
    <string name="feedback_title">Feedback %1$s</string>
    <string name="firebase_database_url">https://qr-barcode-scanner-gamma.firebaseio.com</string>
    <string name="ga_trackingId">UA-1336930-56</string>
    <string name="gcm_defaultSenderId">975752536922</string>
    <string name="google_api_key">AIzaSyCrneKisfQK_R5qjU1Edp-tUITzvBUxSMM</string>
    <string name="google_app_id">1:975752536922:android:481aa818ef3a639764c963</string>
    <string name="google_crash_reporting_api_key">AIzaSyCrneKisfQK_R5qjU1Edp-tUITzvBUxSMM</string>
    <string name="google_storage_bucket">qr-barcode-scanner-gamma.appspot.com</string>
    <string name="hint_lat">Latitude</string>
    <string name="hint_lng">Longitude</string>
    <string name="hint_query">Query</string>
    <string name="history_clear_one_history_text">Remove item</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No history</string>
    <string name="history_empty_detail_fav">No favorites yet</string>
    <string name="http">http://</string>
    <string name="invalid_entry">Invalid entry</string>
    <string name="is_hidden">Hidden</string>
    <string name="key_banner">ca-app-pub-4806541374979993/8865335464</string>
    <string name="key_interstetial">ca-app-pub-4806541374979993/1097100619</string>
    <string name="location">Location</string>
    <string name="message_sms">Message</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="name">Full name</string>
    <string name="note">Notes</string>
    <string name="password">Password</string>
    <string name="required">Please fill all data*</string>
    <string name="share_your_contact">Share your contact info via QR.</string>
    <string name="share_your_contact_details">Only enter data you want to share. When done click ✓. Next time you open My QR your contact QR will be displayed.</string>
    <string name="ssid">SSID/Network name</string>
    <string name="start">Start:</string>
    <string name="title_address">Address</string>
    <string name="title_org">Organization</string>
    <string name="title_result_email_address">Email</string>
    <string name="title_result_tel">Phone</string>
</resources>