<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_photo"
        android:enabled="true"
        android:icon="@drawable/ic_icon_photo"
        android:title="@string/photo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_scanner"
        android:enabled="true"
        android:icon="@drawable/ic_icon_scanner"
        android:title="@string/scanner"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_setting"
        android:enabled="true"
        android:icon="@drawable/ic_icon_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_history"
        android:enabled="true"
        android:icon="@drawable/ic_icon_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
</menu>