<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/is_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_hidden"
        android:textColor="@color/form_text_color" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/form_text_v_margin"
        android:layout_marginBottom="@dimen/form_text_v_margin"
        android:background="@drawable/inputb_bg"
        android:hint="@string/password"
        android:singleLine="false"
        android:textColor="@color/inputTextColor"
        android:theme="@style/EditTextStyle" />

    <EditText
        android:id="@+id/ssid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/form_text_v_margin"
        android:layout_marginBottom="@dimen/form_text_v_margin"
        android:background="@drawable/inputb_bg"
        android:hint="@string/ssid"
        android:inputType="text"
        android:textColor="@color/inputTextColor"
        android:theme="@style/EditTextStyle" />

    <Spinner
        android:id="@+id/network_type"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5.0dip"
        android:layout_marginBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:paddingBottom="5.0dip"
        android:textColor="@color/form_text_color" />

    <TextView
        android:id="@+id/ssid_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="@color/errorColor"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pass_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="@color/errorColor"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone" />
</LinearLayout>