<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/event_all_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_day_event"
        android:textSize="@dimen/form_text_title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/form_text_v_margin"
        android:layout_marginBottom="@dimen/form_text_v_margin"
        android:background="@drawable/inputb_bg"
        android:hint="@string/event_title"
        android:lines="1"
        android:textColor="@color/inputTextColor"
        android:textSize="@dimen/form_text"
        android:theme="@style/EditTextStyle" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/form_text_v_margin"
        android:layout_marginBottom="@dimen/form_text_v_margin"
        android:background="@drawable/inputb_bg"
        android:hint="@string/location"
        android:lines="1"
        android:textColor="@color/inputTextColor"
        android:textSize="@dimen/form_text"
        android:theme="@style/EditTextStyle" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/form_text_v_margin"
        android:layout_marginBottom="@dimen/form_text_v_margin"
        android:background="@drawable/inputb_bg"
        android:gravity="center|left|top"
        android:hint="@string/description"
        android:lines="4"
        android:textColor="@color/inputTextColor"
        android:textSize="@dimen/form_text"
        android:theme="@style/EditTextStyle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/event_button_pad"
            android:textSize="@dimen/form_text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/time_margin"
            android:padding="@dimen/event_button_pad"
            android:textSize="@dimen/form_text_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/event_button_pad"
            android:textSize="@dimen/form_text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/time_margin"
            android:padding="@dimen/event_button_pad"
            android:textSize="@dimen/form_text_title"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="@dimen/form_text_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="@dimen/form_text_title"
        android:textStyle="bold" />
</LinearLayout>